src/content/docs/sdk/unity/v5/features/subscriptions-zh.mdx
---
title: 发送订阅信息
description: 使用这些方法向 Adjust 发送订阅信息。
slug: zh/sdk/unity/features/subscriptions
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /zh/sdk/unity/v4/features/subscriptions
---

<Callout type="important">

下列步骤仅会在 Adjust SDK 中设置订阅监测。要启动该功能，Adjust 需要设置应用相关的具体信息。请发送邮件至 [support@adjust.com](mailto:support@adjust.com)或与您的技术客户经理联系进行设置。

</Callout>

您可以用 Adjust SDK 记录 App Store 和 Play 应用商店的订阅，并验证这些订阅是否有效。用户购买订阅后，创建一个包含细节的 `AdjustAppStoreSubscription` 或 `AdjustPlayStoreSubscription` 实例。

## 1\. Instantiate a subscription object {#1-instantiate-a-subscription-object}

要开始设置，先创建一个包含订阅购买细节的订阅对象。

<Tabs>
<Tab title="App Store" sync="appstore" icon="PlatformIos">
<CodeBlock title="方法签名">

```cs
public AdjustAppStoreSubscription(string price, string currency, string transactionId);
```

</CodeBlock>

创建一个 `AdjustAppStoreSubscription` 对象，属性如下：

<Table>

| 参数            | 数据类型 | 描述                                                                                                                                                                                                                                                                     |
| --------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `price`         | `string` | 订阅价格                                                                                                                                                                                                                                                                 |
| `currency`      | `string` | 订阅使用的币种。此信息格式为 [`priceLocale`](https://developer.apple.com/documentation/foundation/nslocale/1642836-currencycode?language=objc) 对象的 [`currencyCode`](https://developer.apple.com/documentation/storekit/skproduct/1506145-pricelocale?language=objc)。 |
| `transactionId` | `string` | 您的交易 ID                                                                                                                                                                                                                                                              |

</Table>

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
   price,
   currency,
   transactionId);
```

</Tab>
<Tab title="Play 商店" sync="playstore" icon="PlatformGooglePlay">
<CodeBlock title="方法签名">

```cs
public AdjustPlayStoreSubscription(string price, string currency, string sku, string orderId, string signature, string purchaseToken)
```

</CodeBlock>

创建一个 `AdjustPlayStoreSubscription` 对象，属性如下：

<Table>

| 参数            | 数据类型 | 描述                                                                                                                                                       |
| --------------- | -------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `price`         | `string` | 订阅价格                                                                                                                                                   |
| `currency`      | `string` | 订阅使用的币种                                                                                                                                             |
| `sku`           | `string` | 产品 ID                                                                                                                                                    |
| `orderId`       | `string` | 您的交易 ID                                                                                                                                                |
| `signature`     | `string` | 购买数据的签名                                                                                                                                             |
| `purchaseToken` | `string` | 交易唯一识别码。请参考[Google 的文档](<https://developer.android.com/reference/com/android/billingclient/api/Purchase#getPurchaseToken()>)，了解更多信息。 |

</Table>

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
   price,
   currency,
   sku,
   orderId,
   signature,
   purchaseToken);
```

</Tab>
</Tabs>

### Record the purchase date {#record-the-purchase-date}

您可以记录用户购买订阅的日期。SDK 会返回该数据用于报告。

<Tabs>
<Tab title="App Store" sync="appstore" icon="PlatformIos">
<CodeBlock title="属性声明">

```cs
public string TransactionDate { get; set; }
```

</CodeBlock>

设置`AdjustAppStoreSubscription`实例的`setTransactionDate`属性来记录订阅的时间戳。

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
    price,
    currency,
    transactionId);
//...
subscription.TransactionDate = transactionDate;
```

</Tab>
<Tab title="Play 商店" sync="playstore" icon="PlatformGooglePlay">
<CodeBlock title="属性声明">

```cs
public string PurchaseTime { get; set; }
```

</CodeBlock>

设置`AdjustPlayStoreSubscription`实例的`PurchaseTime`属性来记录订阅的时间戳。

```cs
AdjustPlayStoreSubscription subscription = new AdjustPlayStoreSubscription(
    price,
    currency,
    sku,
    orderId,
    signature,
    purchaseToken);
subscription.PurchaseTime = purchaseTime;
```

</Tab>
</Tabs>

### Record the purchase region \(iOS only\) {#record-the-purchase-region-ios-only}

<CodeBlock title="属性声明">

```cs
public string SalesRegion { get; set; }
```

</CodeBlock>

您可以记录用户购买订阅的地区。为此，请将`AdjustPlayStoreSubscription`实例的`SalesRegion`属性设置为`string`形式的国家代码。此信息需为[`Storefront`](https://developer.apple.com/documentation/storekit/storefront)对象的[`countryCode`](https://developer.apple.com/documentation/storekit/storefront/3792000-countrycode)。

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
    price,
    currency,
    transactionId);
//...
subscription.SalesRegiom = salesRegion;
```

### Add callback parameters {#add-callback-parameters}

您可以向订阅对象附加回传参数。SDK 会将这些参数附加至您的回传 URL。要添加回传参数，请在订阅对象上调用 `AddCallbackParameter` 方法。多次调用该方法可添加多个回传参数。

<Tabs>
<Tab title="App Store" sync="appstore" icon="PlatformIos">
<CodeBlock title="方法签名">

```cs
public void AddCallbackParameter(string key, string value);
```

</CodeBlock>

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
    price,
    currency,
    transactionId);
//...
subscription.AddCallbackParameter("key1", "value1");
subscription.AddCallbackParameter("key2", "value2");
```

</Tab>
<Tab title="Play 商店" sync="playstore" icon="PlatformGooglePlay">
<CodeBlock title="方法签名">

```cs
public void AddCallbackParameter(string key, string value);
```

</CodeBlock>

```cs
AdjustPlayStoreSubscription subscription = new AdjustPlayStoreSubscription(
    price,
    currency,
    sku,
    orderId,
    signature,
    purchaseToken);
//...
subscription.AddCallbackParameter("key1", "value1");
subscription.AddCallbackParameter("key2", "value2");
```

</Tab>
</Tabs>

### Add partner parameters {#add-partner-parameters}

您可以向订阅对象附加合作伙伴参数。用户购买订阅时，SDK 会将这些参数发送至 Adjust 服务器。Adjust 服务器会将此信息转发至您的合作伙伴。要添加合作伙伴参数，请在您的订阅对象上调用`AddPartnerParameter`方法。多次调用该方法可添加多个合作伙伴参数。

<Tabs>
<Tab title="App Store" sync="appstore" icon="PlatformIos">
<CodeBlock title="方法签名">

```cs
public void AddPartnerParameter(string key, string value);
```

</CodeBlock>

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
    price,
    currency,
    transactionId);
//...
subscription.AddPartnerParameter("key1", "value1");
subscription.AddPartnerParameter("key2", "value2");
```

</Tab>
<Tab title="Play 商店" sync="playstore" icon="PlatformGooglePlay">
<CodeBlock title="方法签名">

```cs
public void AddPartnerParameter(string key, string value);
```

</CodeBlock>

```cs
AdjustPlayStoreSubscription subscription = new AdjustPlayStoreSubscription(
    price,
    currency,
    sku,
    orderId,
    signature,
    purchaseToken);
//...
subscription.AddPartnerParameter("key1", "value1");
subscription.AddPartnerParameter("key2", "value2");
```

</Tab>
</Tabs>

## 2\. Record subscription information {#2-record-subscription-information}

设置好订阅对象后，您就可以通过 Adjust SDK 对其进行记录了。

<Tabs>
<Tab title="App Store" sync="appstore" icon="PlatformIos">
<CodeBlock title="方法签名">

```cs
public static void TrackAppStoreSubscription(AdjustAppStoreSubscription subscription);
```

</CodeBlock>

将订阅对象传送至 `Adjust.TrackAppStoreSubscription` 方法，以记录用户订阅购买。

```cs
AdjustAppStoreSubscription subscription = new AdjustAppStoreSubscription(
   price,
   currency,
   transactionId);
subscription.TransactionDate = transactionDate;
subscription.AalesRegion = salesRegion;
subscription.AddCallbackParameter("key1", "value1");
subscription.AddCallbackParameter("key2", "value2");
subscription.AddPartnerParameter("key1", "value1");
subscription.AddPartnerParameter("key2", "value2");

Adjust.TrackAppStoreSubscription(subscription);
```

</Tab>
<Tab title="Play 商店" sync="playstore" icon="PlatformGooglePlay">
<CodeBlock title="方法签名">

```cs
public static void TrackPlayStoreSubscription(AdjustPlayStoreSubscription subscription);
```

</CodeBlock>

将订阅对象传送至 `Adjust.TrackPlayStoreSubscription` 方法，以记录用户订阅购买。

```cs
AdjustPlayStoreSubscription subscription = new AdjustPlayStoreSubscription(
   price,
   currency,
   sku,
   orderId,
   signature,
   purchaseToken);
subscription.PurchaseTime = purchaseTime;
subscription.AddCallbackParameter("key1", "value1");
subscription.AddCallbackParameter("key2", "value2");
subscription.AddPartnerParameter("key1", "value1");
subscription.AddPartnerParameter("key2", "value2");

Adjust.TrackPlayStoreSubscription(subscription);
```

</Tab>
</Tabs>
